# Hora-Police

./: .gitignore  AGGRESSIVE_CLEANUP.md  ARCHITECTURE.md  BUILD_ALTERNATIVES.md  BUILD_AND_RUN.md  BUILD_NOTES.md  BUILD_REMOTE.md  CHANGELOG_FIXES.md  COMPLETE_SOLUTION.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_HOSTINGER.md  DEPLOYMENT_RENAME.md  EMERGENCY_FIX.md  FILE_MALWARE_DETECTION.md  FINAL_FIX.md  FIXES_APPLIED.md  FIX_203_EXEC_QUICK_START.md  FIX_LINKER_ERROR.md  FIX_NOW.md  FIX_OOM_AND_DEPLOY.md  FIX_SCRIPT_SUMMARY.md  HEALTH_CHECK.md  HORA_POLICE_SYSTEM_REPORT.md  HOSTINGER_KVM4_RUNBOOK.md  INSTALL_PREBUILT.md  KVM_DEPLOYMENT_QUICK.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_FIX.md  QUICK_FIX_OOM.md  QUICK_FIX_SERVICE.md  QUICK_FIX_VPS.md  QUICK_START.md  README.md  REMEDIATION_BINARY_MISSING.md  RUN_FIX_ON_VPS.md  SETUP_RUST.md  (+25 more)
config.examples/: hostinger_kvm4.toml
etc/cron.d/: hora-police-maintenance
etc/logrotate.d/: hora-police
etc/sysctl.d/: 60-inotify.conf
etc/tmpfiles.d/: hora-police.conf
scripts/: check-memory-limits.sh  check-service.sh  install-binary.sh  update.sh  verify-deployment.sh
src/: config.rs  cpu_analyzer.rs  cron_watcher.rs  daemon.rs  database.rs  deploy_detector.rs  environment.rs  file_blocker.rs  file_quarantine.rs  file_scanner.rs  file_watcher.rs  intelligence.rs  kill_engine.rs  lib.rs  main.rs  nginx_integration.rs  npm_scanner.rs  pm2_integration.rs  process_monitor.rs  react_detector.rs  rollback.rs  safe_kill.rs  systemd_integration.rs  telegram.rs  whitelist.rs  zombie_reaper.rs
systemd/: hora-police.service
