[package]
name = "sentinel-daemon"
version = "0.1.0"
edition = "2021"
authors = ["Security Team"]
description = "High-performance anti-malware daemon for Ubuntu VPS"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
sysinfo = "0.30"
nix = "0.27"
procfs = "0.16"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
regex = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

