[package]
name = "hora-police"
version = "0.1.0"
edition = "2021"
authors = ["Security Team"]
description = "Hora-Police: High-performance anti-malware daemon with aggressive cleanup for Ubuntu VPS"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
sysinfo = "0.30"
nix = { version = "0.27", features = ["process", "signal"] }
procfs = "0.16"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
regex = "1.10"
inotify = "0.10"
clap = { version = "4.0", features = ["derive"] }
hmac = "0.12"
rand = "0.8"
sd-notify = "0.4"
num_traits = "0.2"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"  # Size-optimized (use "3" if you favor speed)
panic = "abort"
strip = "debuginfo"

# Low-memory build profile (for systems with limited RAM)
[profile.lowmem]
inherits = "release"
lto = false  # Disable LTO to reduce memory usage
codegen-units = 16  # More units = less memory per unit
opt-level = 2  # Lower optimization = less memory

